Hyperlink Dailog: Fix alignments of text inputs
-Adjust width of text inputs for a uniform alignment
-Hide empty frame in document page

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -2404,6 +2404,13 @@ kbd,
 
 /* Insert hyperlink dialog */
 
+
+#HyperlinkDocPage,
+#HyperlinkInternetPage,
+#HyperlinkMailPage {
+	width: 100%;
+}
+
 #HyperlinkInternetPage #grid2,
 #HyperlinkInternetPage #label2,
 #HyperlinkInternetPage #lbProtocol,
@@ -2437,6 +2444,7 @@ kbd,
 	grid-template-columns: 87px 1fr 38px !important;
 }
 
+#HyperlinkDocPage #frame1,
 [id^='Hyperlink'] .ui-grid-cell:empty,
 [id^='Hyperlink'] .hidden {
 	display: none;
